WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129877
[GTK] Timeout sources not correctly removed
https://bugs.webkit.org/show_bug.cgi?id=129877
Summary
[GTK] Timeout sources not correctly removed
Carlos Garcia Campos
Reported
2014-03-07 05:03:05 PST
(WebKitWebProcess:23532): GLib-CRITICAL **: Source 1234 was not found when attempting to remove it
Attachments
Patch
(2.43 KB, patch)
2014-03-07 05:05 PST
,
Carlos Garcia Campos
pnormand
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-03-07 05:05:55 PST
Created
attachment 226117
[details]
Patch
Philippe Normand
Comment 2
2014-03-07 05:17:04 PST
Comment on
attachment 226117
[details]
Patch Thanks!
Carlos Garcia Campos
Comment 3
2014-03-07 05:22:16 PST
Committed
r165257
: <
http://trac.webkit.org/changeset/165257
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug